[package]
name = "odyssey-e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
odyssey-constants.workspace = true

alloy.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true
alloy-signer-local.workspace = true

tokio.workspace = true
url = "2.5.0"
ci_info = "0.14.14"
serde.workspace = true

[lints]
workspace = true
