[package]
name = "odyssey-e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
odyssey-common.workspace = true

reth-primitives-traits.workspace = true
reth-trie-common.workspace = true

alloy = { workspace = true, features = ["signers", "signer-local"] }

tokio.workspace = true
url = "2.5.0"
ci_info = "0.14.14"

[lints]
workspace = true
