[package]
name = "odyssey-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
odyssey-common.workspace = true

reth-primitives-traits.workspace = true
reth-cli.workspace = true
reth-errors.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-optimism-node.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-transaction-pool.workspace = true
reth-trie-common.workspace = true
reth-trie-db.workspace = true
reth-network.workspace = true
reth-network-types.workspace = true
reth-chain-state.workspace = true

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true

op-alloy-consensus.workspace = true

serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true

[dev-dependencies]
alloy-rpc-types-engine.workspace = true

[lints]
workspace = true
