[package]
name = "odyssey-risc-v-handler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# reth
reth-evm.workspace = true
reth-revm.workspace = true

# risc-v
eth-riscv-interpreter.workspace = true
rvemu.workspace = true

[dev-dependencies]

[lints]
workspace = true
