[package]
name = "odyssey-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-json-rpc.workspace = true
alloy-rpc-types-eth.workspace = true

reth-optimism-primitives = { workspace = true, features = [
    "serde-bincode-compat",
    "reth-codec",
] }
reth-optimism-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-storage-api.workspace = true

jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
eyre.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }

metrics.workspace = true
metrics-derive.workspace = true

[dev-dependencies]
serde_json.workspace = true
jsonrpsee = { workspace = true, features = ["server", "client", "macros"] }

[lints]
workspace = true
